fix overflows, add unnecessary files to gitignore

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -144,6 +144,7 @@ nav {
 #about {
   padding: 10% 20%;
   transform: skewY(10deg);
+  overflow-y: auto;
 
   p {
     color: theme.$snow;
@@ -159,7 +160,7 @@ nav {
   margin-right: 50px;
 }
 
-// Next section
+// Skills section
 
 .gradient-grey {
   @extend .angled-div;
@@ -173,6 +174,26 @@ nav {
   background: #000000;
   background: -webkit-linear-gradient(to right, #434343, #000);
   background: linear-gradient(to right, #434343, #000);
+}
+
+.laptop-picture {
+  float: right;
+  width: 800px;
+  border-radius: 20%;
+  margin-right: 50px;
+}
+
+#skills {
+  padding: 10% 20%;
+  transform: skewY(10deg);
+  overflow-y: auto;
+
+  p {
+    color: theme.$snow;
+    font-family: theme.$spartan;
+    font-size: 1.2rem;
+    margin: 30px;
+  }
 }
 
 // Animations
